# differ

./: LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx  main.tsx  theme.css  theme.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  review.rs  watcher.rs
src-tauri/src/git/: diff.rs  meta.rs  mod.rs  types.rs
src/components/: BranchPickerModal.css  BranchPickerModal.tsx  CloneModal.css  CloneModal.tsx  CodeViewCommentOverlay.css  CodeViewCommentOverlay.tsx  CodeViewPane.tsx  CodeViewPanel.css  CodeViewPanel.tsx  CommandPalette.css  CommandPalette.tsx  CommitTimeline.css  CommitTimeline.tsx  DiffPane.tsx  DiffSearch.tsx  DiffViewBoundary.tsx  FileDiff.tsx  FileTree.css  FileTree.tsx  MainPane.tsx  MainPanel.css  MainPanel.tsx  Modal.css  Modal.tsx  Popover.css  Popover.tsx  SettingsMenu.tsx  SettingsPanel.css  SettingsPanel.tsx  ShortcutsHelp.tsx  ShortcutsModal.css  ShortcutsModal.tsx  Sidebar.css  Sidebar.tsx  StatusBar.css  StatusBar.tsx  Toasts.css  Toasts.tsx  TopBar.css  TopBar.tsx  (+3 more)
src/diffs/: workerPool.ts
src/hooks/: index.ts  useAutoFocus.ts  useClickOutside.ts  useDebouncedValue.test.ts  useDebouncedValue.ts  useEscapeKey.ts  usePopoverPlacement.test.ts  usePopoverPlacement.ts
src/state/: branches.ts  codeViewComments.ts  commitStats.ts  commits.ts  diff.ts  diffText.ts  fullDiff.ts  highlighter.ts  persist.ts  refresh.ts  repoActions.ts  review.test.ts  (+5 more)
(+6 files in other folders)
