[package]
name = "differ"
version = "0.1.4"
description = "Branch-level git diff viewer"
authors = ["chitreancoder"]
edition = "2021"

[lib]
name = "differ_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = { version = "0.19", default-features = false }
tokio = { version = "1", features = ["process", "io-util"] }
thiserror = "1"
